# dubbed-video-downloader

./: .gitignore  CONTRIBUTING.md  LICENSE  README-TR.md  README.md  pyproject.toml  readme-tr.md  readme.md  requirements.txt  script.py
src/dubbed_video_downloader/: __init__.py  cli.py  config.py  core.py  doctor.py  download_mode.py  errors.py  exists_behavior.py  quality.py
tests/: test_cli.py  test_config.py  test_core.py  test_errors.py
