[project]
name = "dubbed-video-downloader"
version = "0.1.0"
description = "Download YouTube videos with a selected dubbed audio track."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "yt-dlp>=2026.3.17",
    "yt-dlp-ejs>=0.8.0",
]

[project.scripts]
dbdvdl = "dubbed_video_downloader.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/dubbed_video_downloader"]
